@@ -89,12 +89,6 @@ PATCHES ACCEPTED TO BACKPORT FROM TRUNK:
         http://issues.apache.org/bugzilla/attachment.cgi?id=20480
       +1: jfclere, mturk, rpluem
 
-    * mod_proxy: Fix the 503 returned when session route does
-      not match any of the balancer members.
-      Trunk version of patch:
-        http://svn.apache.org/viewvc?view=rev&revision=556931
-      +1: mturk, rpluem, jfclere
-
 PATCHES PROPOSED TO BACKPORT FROM TRUNK:
 
     * ApacheMonitor: Fix Windows Vista detection.
